v149a5: Tester-only Clocks are Red.